--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hi Julie</title>
+  <style>
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .element {
+      margin: 2%;
+    }
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 50%;
+    }
+  </style>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="element">
+      <img src="clue.jpg" alt="sunset">
+      <p>
+        Lorem ipsum dolor sit amet, omnes scaevola invidunt mel ad, ei eum legimus inermis liberavisse, commune scaevola consetetur cu per. At tritani laoreet concludaturque mel. Cum id debitis recteque, noster latine complectitur eu nec. Eam at quaestio vituperata, qui dico ceteros gubergren ei, at decore noluisse mel. Te eum esse laoreet nonumes, ignota ridens liberavisse ne per, vitae deseruisse no ius. Ne fugit viris temporibus vix, at unum possit forensibus cum. Vel alii verterem temporibus et, feugait consectetuer vix no.
+      </p>
+    </div>
+  </div>
 </body>
 </html>
